tests/baselines/reference/multipleClassPropertyModifiers.errors.txt
multipleClassPropertyModifiers.ts(3,12): error TS1029: 'public' modifier must precede 'static' modifier.
multipleClassPropertyModifiers.ts(5,12): error TS1029: 'private' modifier must precede 'static' modifier.


==== multipleClassPropertyModifiers.ts (2 errors) ====
    class C {
        public static p1;
        static public p2;
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
        private static p3;
        static private p4;
               ~~~~~~~
!!! error TS1029: 'private' modifier must precede 'static' modifier.
    }